# jtplayer

./: CMakeLists.txt  CMakeLists.txt.user.a226207  main.cpp  widget.cpp  widget.h  widget.ui
include/: FFmpegInclude.h  VFrame.h  avclock.h  jtdecoder.h  jtdemux.h  jtoutput.h  jtplayer.h  openglwidget.h  playeroutput.h  ptsslider.h  test.h  threadpool.h
resource/: res.qrc  yuv.frag  yuv.vert
src/: jtdecoder.cpp  jtdemux.cpp  jtoutput.cpp  jtplayer.cpp  openglwidget.cpp  playeroutput.cpp  ptsslider.cpp  threadpool.cpp
src/test/: test.cpp
